--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 DEBUG=True
 SECRET_KEY=django-insecure-v%-sqzl8bgq*vf*z&j!os1il*m&t#s_+40rp*p4^l&1!ce0i0-
-DATABASE_URL=sqlite:///db.sqlite3 
+DATABASE_URL=sqlite:///db.sqlite3
+OPENAI_API_KEY=sk-dummy-key-please-replace-with-your-actual-key 
